--- a/style.css
+++ b/style.css
@@ -170,3 +170,9 @@ input[type='color']::-webkit-color-swatch {
 }
 
 /* Iteration 3: Style the coloring buttons */
+
+input{
+    width: 100px;
+    height: 100px;
+    border-radius: 4px;
+}
